Alignment Fix

--- a/src/App.css
+++ b/src/App.css
@@ -155,12 +155,12 @@ h4{
 }
 .sk_head{
   position: absolute;
-  top: 50%;
+  top: 38%;
   left: 45%;
 }
 .sk{
   position: absolute;
-  top: 65%;
+  top: 50%;
   left: 58%;
   display: inline-block;
   width: 90px;
@@ -176,19 +176,19 @@ h4{
   left: 75%;
 }
 .s3{
-  top: 75%;
+  top: 60%;
   left: 58%;
 }
 .s4{
-  top: 75%;
+  top: 60%;
   left: 75%;
 }
 .s5{
-  top: 85%;
+  top: 70%;
   left: 58%;
 }
 .s6{
-  top: 85%;
+  top: 70%;
   left: 75%;
 }
 mark{
@@ -231,10 +231,10 @@ mark{
 }
 .vr_line{
   width: 10px;
-  height: 210px;
+  height: 300px;
   border-radius: 5px;
   position: absolute;
-  top: 58%;
+  top: auto;
   left: 6.25%;
   box-shadow: inset -3px -3px 7px #ffffff73, inset 3px 3px 5px rgba(18, 18, 19, 0.288);
 }
@@ -244,11 +244,15 @@ mark{
   border-radius: 5px;
   background: linear-gradient(120deg,rgb(49, 204, 98) 0,rgb(49, 204, 98) 100%);
 }
+.edDiv{
+  margin-top: 40px;
+  margin-left: 2%;
+}
 .inn1{
   margin-top: 45px;
 }
 .inn2{
-  margin-top: 80px;
+  margin-top: 95px;
 }
 .social
 {
@@ -404,7 +408,7 @@ mark{
   color: rgba(49, 204, 98,1);
 }
 .back2{
-  top: 55%;
+  top: auto;
   left: 4%;
   z-index: 1;
 }
@@ -432,6 +436,10 @@ mark{
 }
 .back5 {
 	background: #FA807D;
+}
+.back6 {
+  margin-top: 20px;
+  margin-left: 5px;
 }
 
 @media all and (max-width: 450px) {
